command, xss, sqli done. tinggal buatin content-length di header. NoSQLi sama XXE belum

--- a/Command-Injection/postmethod/index.html
+++ b/Command-Injection/postmethod/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <h1>Form Ping Jaringan</h1>
-    <form action="proses.php" method="post">
+    <form action="index.php" method="post">
       <label for="host">Host:</label>
       <input type="text" id="host" name="host"><br><br>
       <input type="submit" value="Ping">
