--- a/XSS/dom-xss/get/index.html
+++ b/XSS/dom-xss/get/index.html
@@ -4,7 +4,7 @@
 	<title>Form Input</title>
 </head>
 <body>
-	<form action="submit.php" method="post">
+	<form action="index.php" method="post">
 		<label for="nama">Nama:</label>
 		<input type="text" id="nama" name="nama"><br>
 
